fix depre warning, imports